# rust_in_action_playground

./: .wr.toml  README.MD
aoc_2024/: Cargo.toml
aoc_2024/src/: main.rs
aoc_2024/src/day_eight/: part_one.rs  part_two.rs
aoc_2024/src/day_eighteen/: mod.rs  part_one.rs  part_two.rs
aoc_2024/src/day_eleven/: mod.rs  part_one.rs  part_two.rs
aoc_2024/src/day_fifteen/: mod.rs  part_one.rs  part_two.rs
aoc_2024/src/day_five/: part_one.rs  part_two.rs
aoc_2024/src/day_four/: part_one.rs  part_two.rs
aoc_2024/src/day_one/: partone.rs  (+1 more)
aoc_2025/: Cargo.toml
aoc_2025/src/: lib.rs  load.rs  main.rs  read.rs  simplex.rs
aoc_2025/src/day1/: mod.rs
aoc_2025/src/day10/: mod.rs
aoc_2025/src/day11/: mod.rs
aoc_2025/src/day12/: mod.rs
aoc_2025/src/day2/: mod.rs
aoc_2025/src/day3/: mod.rs
aoc_2025/src/day4/: mod.rs
aoc_2025/src/day5/: mod.rs
aoc_2025/src/day6/: mod.rs
aoc_2025/src/day7/: mod.rs
aoc_2025/src/day8/: mod.rs
aoc_2025/src/day9/: mod.rs
chapter_10/src/: loop_waiting.rs  main.rs  shared_variable.rs  suspend_thread.rs  thread_example.rs
chapter_10_render_hex/: Cargo.toml
chapter_10_render_hex/src/: channels_intro.rs  lib.rs  main.rs  parallelism.rs  threadpool.rs
chapter_12/: Cargo.toml
chapter_12/src/: ignore.rs  longjump.rs  main.rs  noop.rs  shutdown.rs  toy_global.rs  unsafe_rust.rs
chapter_2/: Cargo.toml  search_text.txt
chapter_2/src/: abs.rs  complex.rs  main.rs  mandelbrot.rs  needle.rs  quote.rs
chapter_3/: Cargo.toml
chapter_3/src/: main.rs  trait_file.rs
chapter_4/: Cargo.toml
chapter_4/src/: main.rs
chapter_5/src/: foo.rs  main.rs  mantisa.rs  q7.rs
chapter_6/: Cargo.toml
chapter_6/src/: external.rs  main.rs  particle.rs  references.rs  stack.rs  unsafer.rs
chapter_7/: Cargo.toml
chapter_7/src/: btreemapplay.rs  bytestringdemo.rs  calendar.rs  hashmapplay.rs  hexdump.rs  main.rs  parity.rs
chapter_7_db_lib/: Cargo.toml
chapter_7_db_lib/src/: akv_disk.rs  akv_mem.rs  lib.rs
chapter_8/: Cargo.toml
chapter_8/misc/: io-error.rs
chapter_8/src/: dns.rs  dns_resolver.rs  mac_play.rs  main.rs  reqwest_play.rs  rpg_play.rs
chapter_9/: Cargo.toml
chapter_9/src/: clock.rs  main.rs
csv_sample/: Cargo.toml  README.MD
csv_sample/src/: main.rs
mget/src/: http.rs  main.rs
rust-for-rustaceans/foundations/: Cargo.toml
rust-web-development/100-exercises-to-learn-rust/: README.md  opencode.json
rust-web-development/100-exercises-to-learn-rust/exercises/08_futures/08_outro/: Cargo.toml
rust-web-development/100-exercises-to-learn-rust/exercises/08_futures/08_outro/src/: lib.rs  ticket.rs  ticket_repo.rs
rust-web-development/beej-socket/: Cargo.toml  README.md
rust-web-development/beej-socket/beej-examples/: Cargo.toml
rust-web-development/beej-socket/beej-examples/src/: lib.rs
rust-web-development/beej-socket/beej-examples/src/broadcast/: mod.rs
rust-web-development/beej-socket/beej-examples/src/listener/: mod.rs
rust-web-development/beej-socket/beej-examples/src/marshall/: mod.rs
rust-web-development/beej-socket/beej-examples/src/pollexample/: mod.rs
rust-web-development/beej-socket/beej-examples/src/pollserver/: mod.rs
rust-web-development/beej-socket/beej-examples/src/selectexample/: mod.rs
rust-web-development/beej-socket/beej-examples/src/selectserver/: mod.rs
rust-web-development/beej-socket/beej-examples/src/showip/: mod.rs
rust-web-development/beej-socket/beej-examples/src/streamclient/: mod.rs
rust-web-development/beej-socket/beej-examples/src/streamserver/: mod.rs
rust-web-development/beej-socket/beej-examples/src/talker/: mod.rs
rust-web-development/beej-socket/builders/: Cargo.toml
rust-web-development/beej-socket/builders/src/: lib.rs
rust-web-development/beej-socket/c_prog/: broadcaster.c  client.c  listener.c  marshal.c  poll_example.c  pollserver.c  select_demo.c  selectserver.c  server.c  showip.c  talker.c
rust-web-development/beej-socket/src/: main.rs
rust-web-development/beej-socket/types/: Cargo.toml
rust-web-development/beej-socket/types/src/: lib.rs
rust-web-development/chapter2/: Cargo.toml
rust-web-development/chapter3/: .gitignore  Cargo.toml  Makefile  README.md  launch.json  log4rs.yaml
rust-web-development/chapter3/handle-errors/: Cargo.toml
rust-web-development/chapter3/handle-errors/src/: lib.rs
rust-web-development/chapter3/migrations/: 20240427133534_questions_table.up.sql  20240528061427_create_accounts_table.up.sql  20240613095704_extend_questions_table.down.sql  20240613095704_extend_questions_table.up.sql
rust-web-development/chapter3/src/: error.rs  main.rs  profanity.rs  store.rs
rust-web-development/chapter3/src/routes/: answer.rs  authentication.rs  question.rs
rust-web-development/chapter3/src/types/: account.rs  answer.rs  mod.rs  pagination.rs  question.rs
rust-web-development/data-privacy/: Cargo.toml  README.md  TODO.md  dataprivacy.db
rust-web-development/data-privacy/src/: db.rs  encryption.rs  main.rs
rust-web-development/http-forward-proxy/: Cargo.toml  README.md  TODO.md
rust-web-development/learn-macros/: Cargo.toml  README.md
rust-web-development/markdown-html/: Cargo.toml  README.md  response.json  response.txt
rust-web-development/markdown-html/docs/: config.yaml  repo.json  sample.md
rust-web-development/markdown-html/src/: bin.rs  main.rs
rust-web-development/markdown-html/src/lib/: mod.rs
rust-web-development/markdown-html/src/lib/server/: mod.rs  webhook.rs  webhooktypes.rs
rust-web-development/password-cracker/: .gitignore  Cargo.toml  Readme.md  build.rs
rust-web-development/rust-bloom-filter/: .gitignore  Cargo.toml  README.md
rust-web-development/rust-docker/: Cargo.toml  README.md
rust-web-development/rust-docker/src/: fetch.rs  main.rs
rust-web-development/rust-tar-extractor/: Cargo.toml  README.md  TAR_NOTES.md
rust-web-development/rust-xargs/: Cargo.toml  README.md
rust-web-development/rust_chess/: Cargo.toml  README.md
rust-web-development/rust_compression/: Cargo.toml  README.md
rust-web-development/rust_xxd/: .gitignore  Cargo.toml  README.md
(+151 files in other folders)
