[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
num = "0.4.3"
reqwest = {version="0.12.24", features= ["blocking"]}

[profile.dev]
# Enable optimizations when running `cargo run` so performance matches the
# release-like Go defaults without changing the solution logic.
opt-level = 3

[profile.release]
lto = false
codegen-units = 16
panic = "abort"

# Highest runtime speed; use with `cargo run --profile perf …`
[profile.perf]
inherits = "release"
lto = "fat"
codegen-units = 1
