[package]
name = "chapter_7_db_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
crc = "1.7"
serde_derive = "1.0.126"
serde = "1.0.126"

[lib]
name ="libactionkv"
path = "src/lib.rs"

[[bin]]
name ="akv_mem"
path ="src/akv_mem.rs"
