workspace = { members = ["beej-examples"] }
[package]
name = "beej-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.5", features = ["derive"] }
nix = {version ="0.29.0", features = ["net","poll","signal"] }
socket2 = "0.5.7"
