[package]
name = "data-privacy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.11.6"
log = "0.4.26"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
rusqlite = "0.33.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.12"
