[package]
name = "markdown-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "markdownlib"
path = "src/lib/mod.rs"

[[bin]]
name = "markdownbin"
path = "src/bin.rs"


[dependencies]
markdown = "1.0.0-alpha.14"
oauth2 = "4.4.2"
reqwest = "0.11.22"
