[package]
name = "markdown-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "markdownlib"
path = "src/lib/mod.rs"

[[bin]]
name = "markdownbin"
path = "src/bin.rs"


[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
dotenv = "0.15.0"
futures-util = "0.3.29"
oas3 = "0.4.0"
oauth2 = "4.4.2"
pulldown-cmark = "0.9.3"
reqwest = {version ="0.11.22", features = ["json"] }
serde = "1.0.192"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
