[package]
name = "rust-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.43", features = ["derive"] }
clap_derive = "4.5.41"
nix = { version = "0.30.1", features = ["hostname", "process",
  "sched","fs","mount","user","signal"] }
reqwest = "0.12.24"
