[package]
name = "rust-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.43", features = ["derive"] }
clap_derive = "4.5.41"
flate2 = "1.1.5"
nix = { version = "0.30.1", features = ["hostname", "process",
  "sched","fs","mount","user","signal"] }
reqwest = { version = "0.12.24", features = ["blocking","json","rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
