[package]
name = "beej-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = {version ="0.29.0", features = ["net","poll","signal"] }
socket2 = "0.5.7"
types = {path = "../types"}
builders = {path = "../builders"}
libc = "0.2.155"
