[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
hyper = { version = "0.14", features = ["full"] }
ticket_fields = { path = "../../../helpers/ticket_fields" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
url = "2.5.7"
once_cell = "1.21.3"

[dev-dependencies]
serial_test = { version = "3.2.0", features = ["async"] }
